// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StorySummary renders correctly 1`] = `
<div>
  <div
    class="default-background"
  >
    <div
      class="uk-container uk-text-center@m"
    >
      <div
        class="uk-section uk-section-xsmall"
      >
        <span
          class="uk-position-small uk-position-top-left"
          data-uk-icon="icon: arrow-left; ratio: 1.75"
        />
      </div>
      <h1
        class="uk-heading-divider uk-margin-small-top"
      >
        mockConstructor
      </h1>
      <div
        class="uk-align-center uk-width-1-2@m"
      >
        <div
          class="uk-align-center uk-width-1-2@m"
        >
          <table
            class="uk-table"
          >
            <thead>
              <tr>
                <th
                  class="uk-text-center"
                >
                  Name
                </th>
                <th
                  class="uk-text-center"
                >
                  Estimate
                </th>
              </tr>
            </thead>
            <tbody>
              
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StorySummary renders estimates withs names 1`] = `
<div>
  <div
    class="default-background"
  >
    <div
      class="uk-container uk-text-center@m"
    >
      <div
        class="uk-section uk-section-xsmall"
      >
        <span
          class="uk-position-small uk-position-top-left"
          data-uk-icon="icon: arrow-left; ratio: 1.75"
        />
      </div>
      <h1
        class="uk-heading-divider uk-margin-small-top"
      >
        mockConstructor
      </h1>
      <div
        class="uk-align-center uk-width-1-2@m"
      >
        <div
          class="uk-align-center uk-width-1-2@m"
        >
          <table
            class="uk-table"
          >
            <thead>
              <tr>
                <th
                  class="uk-text-center"
                >
                  Name
                </th>
                <th
                  class="uk-text-center"
                >
                  Estimate
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  class="uk-text-center"
                >
                  Bob
                </td>
                <td
                  class="uk-text-center"
                >
                  1
                </td>
              </tr>
              <tr>
                <td
                  class="uk-text-center"
                >
                  Andy
                </td>
                <td
                  class="uk-text-center"
                >
                  5
                </td>
              </tr>
              <tr>
                <td
                  class="uk-text-center"
                >
                  Joe
                </td>
                <td
                  class="uk-text-center"
                >
                  3
                </td>
              </tr>
              <tr
                class="uk-text-bold"
              >
                <td
                  class="uk-text-center"
                >
                  Average
                </td>
                <td
                  class="uk-text-center"
                >
                  3
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
